[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://shaders/outline.shader" type="Shader" id=2]
[ext_resource path="res://sprites/player.png" type="Texture" id=3]

[sub_resource type="ShaderMaterial" id=1]

render_priority = 0
shader = ExtResource( 2 )
shader_param/intensity = 29
shader_param/precision = 0.019
shader_param/outline_color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "shader_param" ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 5.6828, 15.0978 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 6.13697, 17.1438 )

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=7]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]

length = 0.3
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}

[sub_resource type="Animation" id=10]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"players",
"mobile",
]]

input_pickable = false
collision_layer = 2
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Material", "Visibility" ]
gravity_on = true
respawnable = false
gravity = 900
movement_speed = 200
respawn_delay = 0.8
spawn_location = Vector2( 0, 0 )
character_name = ""
knockback_duration = 0.1
player_num = 1
max_jumps = 2
jump_speed = 400
wall_slide_friction = 0.9

[node name="Pivot" type="Position2D" parent="." index="0"]

[node name="Sprite" type="Sprite" parent="Pivot" index="0"]

material = SubResource( 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
hframes = 11
frame = 7
_sections_unfolded = [ "Animation", "Material", "Transform" ]

[node name="SlashPoint" type="Position2D" parent="Pivot" index="1"]

[node name="HitBox" type="Area2D" parent="." index="1" groups=[
"hitbox",
]]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox" index="0"]

position = Vector2( 1, 0 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 1, 0 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Animator" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 5 )
anims/jump = SubResource( 6 )
anims/reset = SubResource( 7 )
anims/run = SubResource( 8 )
anims/slash = SubResource( 9 )
anims/wall_slide = SubResource( 10 )
blend_times = [  ]

[node name="JumpPoint" type="Position2D" parent="." index="4"]

position = Vector2( 0, 6.98834 )

[connection signal="area_entered" from="HitBox" to="." method="__on_hitbox_entered"]

[connection signal="animation_finished" from="Animator" to="." method="_on_animation_finished"]


